--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/RSSFeedItemView.xib
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/RSSFeedItemView.xib
@@ -19,6 +19,15 @@
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rd7-6Q-hNj">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="200"/>
+                    <state key="normal">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="viewTouched:" destination="iN0-l3-epB" eventType="touchUpInside" id="iCo-n2-4RY"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
