--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/RSSFeedItemView.xib
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/RSSFeedItemView.xib
@@ -6,21 +6,21 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="RSSFeedItemView">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="200"/>
+        <view autoresizesSubviews="NO" contentMode="scaleToFill" id="iN0-l3-epB" customClass="RSSFeedItemView">
+            <rect key="frame" x="0.0" y="0.0" width="600" height="228"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="QR" translatesAutoresizingMaskIntoConstraints="NO" id="unm-Yq-iIf">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="200"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="QR" translatesAutoresizingMaskIntoConstraints="NO" id="unm-Yq-iIf">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="228"/>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" alpha="0.74999999999999978" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Thats my fucking own view" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Owj-wz-VYp">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="26"/>
+                <label opaque="NO" userInteractionEnabled="NO" alpha="0.74999999999999978" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Owj-wz-VYp">
+                    <rect key="frame" x="0.0" y="201" width="600" height="26"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rd7-6Q-hNj">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="200"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rd7-6Q-hNj">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="228"/>
                     <state key="normal">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -30,12 +30,25 @@
                 </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="Owj-wz-VYp" secondAttribute="bottom" id="2rF-ep-ziP"/>
+                <constraint firstItem="unm-Yq-iIf" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Fse-1H-rGC"/>
+                <constraint firstItem="unm-Yq-iIf" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Q5O-hW-nlC"/>
+                <constraint firstAttribute="bottom" secondItem="rd7-6Q-hNj" secondAttribute="bottom" id="VJ7-r6-Tuu"/>
+                <constraint firstItem="rd7-6Q-hNj" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Wsd-fe-r9B"/>
+                <constraint firstAttribute="trailing" secondItem="rd7-6Q-hNj" secondAttribute="trailing" id="iz2-eZ-zX8"/>
+                <constraint firstItem="rd7-6Q-hNj" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="o6z-Le-27K"/>
+                <constraint firstItem="Owj-wz-VYp" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="q1u-6L-a6u"/>
+                <constraint firstAttribute="trailing" secondItem="Owj-wz-VYp" secondAttribute="trailing" id="rAJ-wp-hhh"/>
+                <constraint firstAttribute="bottom" secondItem="unm-Yq-iIf" secondAttribute="bottom" id="una-JO-M7K"/>
+                <constraint firstAttribute="trailing" secondItem="unm-Yq-iIf" secondAttribute="trailing" id="yfD-Lh-PXL"/>
+            </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="image" destination="unm-Yq-iIf" id="3jD-0A-SCv"/>
                 <outlet property="title" destination="Owj-wz-VYp" id="Ofy-aj-IOj"/>
             </connections>
-            <point key="canvasLocation" x="443" y="289"/>
+            <point key="canvasLocation" x="459" y="24"/>
         </view>
     </objects>
     <resources>
