--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/styles.css
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/styles.css
@@ -1,12 +1,21 @@
 <style>
+
 body {
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     font-weight: 300;
-    
 }
 img {
-    max-width: 100%;
+    max-width: 100% !important;
     width: auto;
+    height: auto;
+}
+
+div {
+    max-width: 100% !important;
+}
+
+iframe {
+    max-width: 100% !important;
     height: auto;
 }
 
