Added LocationPicker and persistant saving choice

--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/Main.storyboard
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/Main.storyboard
@@ -145,10 +145,10 @@
             </objects>
             <point key="canvasLocation" x="2193" y="-153.99999999999997"/>
         </scene>
-        <!--View Controller-->
+        <!--Settings View Controller-->
         <scene sceneID="RRn-VI-kmy">
             <objects>
-                <viewController id="evs-Oh-Jun" sceneMemberID="viewController">
+                <viewController id="evs-Oh-Jun" customClass="SettingsViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="ORa-fX-SH4"/>
                         <viewControllerLayoutGuide type="bottom" id="6rg-Jx-dpP"/>
@@ -156,9 +156,31 @@
                     <view key="view" contentMode="scaleToFill" id="QE4-ny-WZo">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Choose your pingeb.org" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fSU-0I-xzR">
+                                <rect key="frame" x="16" y="72" width="185" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <pickerView contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aAo-MJ-TcX">
+                                <rect key="frame" x="0.0" y="99" width="600" height="162"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="evs-Oh-Jun" id="6JZ-Is-RVc"/>
+                                    <outlet property="delegate" destination="evs-Oh-Jun" id="NlZ-i7-ryt"/>
+                                </connections>
+                            </pickerView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="aAo-MJ-TcX" firstAttribute="leading" secondItem="QE4-ny-WZo" secondAttribute="leadingMargin" constant="-16" id="7M9-Bm-RV9"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="aAo-MJ-TcX" secondAttribute="trailing" constant="-16" id="g8d-N2-o61"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" tag="3" title="" image="Settings" id="fBt-P2-bzm"/>
+                    <connections>
+                        <outlet property="locationPicker" destination="aAo-MJ-TcX" id="tab-Wz-PTf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OW8-hQ-NGl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
