--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/Main.storyboard
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/Main.storyboard
@@ -139,7 +139,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" tag="2" title="" image="qr" id="Vcg-w0-tv5"/>
+                    <tabBarItem key="tabBarItem" tag="2" title="" image="QR" id="Vcg-w0-tv5"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GHE-vJ-7Mb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -247,8 +247,8 @@
     </scenes>
     <resources>
         <image name="Map" width="36" height="37"/>
+        <image name="QR" width="24" height="25"/>
         <image name="Settings" width="27" height="27"/>
         <image name="Start" width="30" height="24"/>
-        <image name="qr" width="36" height="36"/>
     </resources>
 </document>
