New icons, new navbarBarTintColor, new QRCodeReader Cancel title

--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/styles.css
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/styles.css
@@ -4,6 +4,12 @@ body {
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     font-weight: 300;
 }
+
+strong {
+    font-family: "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-weight: 500;
+}
+
 img {
     max-width: 100% !important;
     width: auto;
